# markdown-slide-editor

./: Example.md  LICENSE  README.md  app.py  environment.yml  pyproject.toml
mdx/: mdx_attribute_block.py  mdx_attribute_inline.py  mdx_del.py  mdx_image_inline.py  mdx_inline_graphviz.py  mdx_mark.py  mdx_subscript.py  mdx_superscript.py  renderer.py  tag_attribute_parser.py
static/css/: slides.css  ui.css
static/js/: ui.js
static/themes/: code-borland.css  slide-arial-small.css  slide-arial.css  slide-atkinson-next.css  slide-atkinson.css  slide-default.css  slide-merriweather.css  slide-pano.css  slide-raleway.css  slide-times.css  slide-ugent.css
templates/: index.html  p5js.html  preview.html
